refactor(processor): align code with Java and Groovy/Spock conventions
Use unmodifiable collections (List.of, List.copyOf) in SPI discovery classes,
replace def with final in all Spock tests, use Groovy property access in stubs,
and fix Spock block structure (state assertions in expect:, interactions in then:).

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>